[gd_scene load_steps=61 format=2]

[ext_resource path="res://content/monster/stingray/sheet.png" type="Texture" id=1]
[ext_resource path="res://content/sounds/monster/flyer/FlyerAPPEAR_v2.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/monster/STINGRAY/Deathmonster.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/STINGRAY/vanish.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/snd_hard_01.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/STINGRAY/STING_SHOOT_02.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=11]
[ext_resource path="res://content/monster/stingray/Stingray.gd" type="Script" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/flyer/Retro Bat 01.wav" type="AudioStream" id=15]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=16]
[ext_resource path="res://content/sounds/monster/STINGRAY/appear_02.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/monster/STINGRAY/STING_SHOOT_01.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/STINGRAY/appear_01.wav" type="AudioStream" id=19]
[ext_resource path="res://content/sounds/monster/STINGRAY/appear_03.wav" type="AudioStream" id=20]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="CapsuleShape2D" id=3]
height = 18.0

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 0, 420, 41, 60 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 41, 420, 41, 60 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 41, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 82, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 123, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 164, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 205, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 246, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 287, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 328, 480, 41, 60 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 41, 60 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 41, 300, 41, 60 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 82, 300, 41, 60 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 123, 300, 41, 60 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 164, 300, 41, 60 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 41, 60 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 41, 180, 41, 60 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 82, 180, 41, 60 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 123, 180, 41, 60 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 41, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 82, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 123, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 164, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 0, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 41, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 82, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 123, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 164, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 205, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 246, 60, 41, 60 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 164, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 123, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 41, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 82, 240, 41, 60 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 41, 60 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": false,
"name": "grow",
"speed": 10.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": false,
"name": "shrink",
"speed": 10.0
} ]

[node name="Stingray" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 12 )
techId = "stingray"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( -2, -6 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( -4, -9 )
frames = SubResource( 2 )
animation = "hit"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 1.748
bus = "World"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="ShootSound2" type="AudioStreamPlayer" parent="ShootSound"]
stream = ExtResource( 6 )
volume_db = 0.437
pitch_scale = 1.02
bus = "World"
script = ExtResource( 16 )

[node name="DieSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 3 )
volume_db = -8.059
pitch_scale = 1.13
bus = "Important"
randomVolume = 1.0
randomPitch = 0.2

[node name="DieSound2" parent="DieSound" instance=ExtResource( 7 )]
stream = ExtResource( 15 )
volume_db = -5.0
pitch_scale = 1.15
bus = "World"
randomVolume = 1.0
randomPitch = 0.2

[node name="ShrinkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 3.496
pitch_scale = 1.37
bus = "World"
script = ExtResource( 16 )

[node name="AppearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -2.185
pitch_scale = 1.52
bus = "World"
script = ExtResource( 16 )

[node name="AppearSound2" type="AudioStreamPlayer" parent="AppearSound"]
volume_db = -4.873
pitch_scale = 1.23
bus = "World"
script = ExtResource( 16 )
streams = [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 20 ) ]

[node name="StunSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 8 )
volume_db = -0.227
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 10 ) ]

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.745
pitch_scale = 1.32
bus = "World"

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( 3, 15 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
